--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,23 @@
+asgiref==3.7.2
+cffi==1.15.1
+click==8.1.6
+cryptography==41.0.2
+Django==4.2.3
+django-cors-headers==4.2.0
+django-extensions==3.2.3
+django-sslserver==0.22
+djangorestframework==3.14.0
+drf-yasg==1.21.7
+inflection==0.5.1
+MarkupSafe==2.1.3
+packaging==23.1
 psycopg2-binary==2.9.6
+pycparser==2.21
+pyOpenSSL==23.2.0
 python-dotenv==1.0.0
+pytz==2023.3
+PyYAML==6.0.1
+sqlparse==0.4.4
+typing_extensions==4.7.1
+uritemplate==4.1.1
+Werkzeug==2.3.6
