last_commit_with_docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,14 +20,15 @@ services:
     env_file:
       - .env
     ports:
-      - "5444:5444"
+      - 5432
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
+      # - POSTGRES_DB=${DB_NAME}
+      # - POSTGRES_USER=${DB_USER}
+      # - POSTGRES_PASSWORD=${DB_PASSWORD}
+
 
 volumes:
   postgres_data:
